feat: pick app locale

--- a/lib/src/localization/l10n/intl_en.arb
+++ b/lib/src/localization/l10n/intl_en.arb
@@ -3,5 +3,6 @@
   "dark": "Dark",
   "home": "Home",
   "light": "Light",
-  "settings": "Settings"
+  "settings": "Settings",
+  "searchCountry": "Search Country"
 }
