--- a/lib/src/localization/l10n/intl_en.arb
+++ b/lib/src/localization/l10n/intl_en.arb
@@ -1,8 +1,13 @@
 {
   "@@locale": "en",
+  "ok": "Ok",
   "dark": "Dark",
   "home": "Home",
   "light": "Light",
   "settings": "Settings",
-  "searchCountry": "Search Country"
+  "information": "Information",
+  "searchCountry": "Search Country",
+  "explanationOne": "We show you currency pairs relevant to your locale.",
+  "explanationTwo": "We decide your locale based on your current location if you have permissions on.",
+  "explanationThree": "You can switch the locale by tapping on the flag area at the top left corner."
 }
