--- a/lib/src/localization/l10n/intl_en.arb
+++ b/lib/src/localization/l10n/intl_en.arb
@@ -5,8 +5,10 @@
   "home": "Home",
   "light": "Light",
   "settings": "Settings",
+  "darkMode": "Dark Mode",
   "information": "Information",
   "searchCountry": "Search Country",
+  "syncWithDeviceTheme": "Sync with device theme",
   "explanationOne": "We show you currency pairs relevant to your locale.",
   "explanationTwo": "We decide your locale based on your current location if you have permissions on.",
   "explanationThree": "You can switch the locale by tapping on the flag area at the top left corner."
