feat: add currency pair quote data

--- a/lib/src/localization/l10n/intl_en.arb
+++ b/lib/src/localization/l10n/intl_en.arb
@@ -3,7 +3,12 @@
   "ok": "Ok",
   "dark": "Dark",
   "home": "Home",
+  "open": "Open",
+  "close": "Close",
   "light": "Light",
+  "change": "Change",
+  "dailyLow": "24h Low",
+  "dailyHigh": "24h High",
   "settings": "Settings",
   "darkMode": "Dark Mode",
   "information": "Information",
