--- a/lib/src/localization/l10n/intl_en.arb
+++ b/lib/src/localization/l10n/intl_en.arb
@@ -15,6 +15,7 @@
   "searchCountry": "Search Country",
   "chooseLanguage": "Choose a language",
   "syncWithDeviceTheme": "Sync with device theme",
+  "viewingDailyChangesFor": "Viewing daily changes for:",
   "explanationOne": "We show you currency pairs relevant to your locale.",
   "explanationTwo": "We decide your locale based on your current location if you have permissions on.",
   "explanationThree": "You can switch the locale by tapping on the flag area at the top left corner."
