--- a/lib/src/localization/l10n/intl_en.arb
+++ b/lib/src/localization/l10n/intl_en.arb
@@ -7,6 +7,7 @@
   "close": "Close",
   "light": "Light",
   "change": "Change",
+  "forString": "For",
   "dailyLow": "24h Low",
   "dailyHigh": "24h High",
   "settings": "Settings",
@@ -14,8 +15,14 @@
   "information": "Information",
   "searchCountry": "Search Country",
   "chooseLanguage": "Choose a language",
+  "areListedBelow": "are listed below",
   "syncWithDeviceTheme": "Sync with device theme",
   "viewingDailyChangesFor": "Viewing daily changes for:",
+  "availableCurrencyPairs": "The available currency pairs",
+  "viewDataForListedSymbols": "We provide chart data for ",
+  "failedQuoteAndPriceFetch": "Quote and price data are currently unavailable",
+  "noPairFound": "None found. Please switch to a different currency.",
+  "weProvideTrendDataForPairs": "We provide up-to-date trend data for forex pairs across a wide range of currencies, including USD, EUR, and many others.",
   "explanationOne": "We show you currency pairs relevant to your locale.",
   "explanationTwo": "We decide your locale based on your current location if you have permissions on.",
   "explanationThree": "You can switch the locale by tapping on the flag area at the top left corner."
