test: add tests for fallback providers

--- a/lib/src/localization/l10n/intl_en.arb
+++ b/lib/src/localization/l10n/intl_en.arb
@@ -13,9 +13,9 @@
   "settings": "Settings",
   "darkMode": "Dark Mode",
   "information": "Information",
-  "searchCountry": "Search Country",
   "chooseLanguage": "Choose a language",
   "areListedBelow": "are listed below",
+  "searchCountry": "Search country or currency",
   "syncWithDeviceTheme": "Sync with device theme",
   "viewingDailyChangesFor": "Viewing daily changes for:",
   "availableCurrencyPairs": "The available currency pairs",
